css/busfinder.css
.app-container {
  	margin-top: 60px;
	text-align: center;
	background-image: url("../img/ps_neutral.png");
}

@media (max-width: 979px) {
	.app-container {
		margin-top: 0px;
	}
}

.navbar {
	box-shadow: 0px 1px 10px rgba(0, 0, 0, .5);
}	

.navbar-inner {
	background-image: none !important;
	background-color:#82A6BA !important;
	border-bottom: none;
}

.navbar-inner h1 {
	font-size: 16px;
	line-height:52px;
	display: inline;
	font-style: italic;
	color: white;
	text-transform: uppercase;
	position: absolute;
	left: 50%;
	margin-left: -74px;
}

.navbar-inner button {
	margin-top: 7px !important;
}

.navbar-inner {}

.navbar-inner .container {
	position: relative;
}

a.brand {
	
}


input {
	border: 2px solid white !important;
	border-right: none !important;
}

button.btn-info {
	background-image: none;
	background-color: #A7BFCC;
	border: 2px solid white;
	position: absolute;
	right:0;
	z-index: 3;
}


button.btn-info:focus {
	background-color: #82A6BA;
}

i.icon-search {
	color: white !important;
}

.btn-info:hover {
	background-color:#82A6BA;	
}

button.add-on {
	background-image: none !important;
	background-color: #A7BFCC !important;
	border: 2px solid white !important;
	color: white !important;
}

button.add-on:hover {
	background-color: #82A6BA !important;
}


.input-append {
	height: 37px;
	width: 40%;
	margin-bottom: 0px;
}

.input-append input {
	height: 100%;
	width: 100%;
}

.input-append button.add-on {
	height: inherit !important;
}

* {
	-webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.title a {
	font-family: Arvo;
	font-weight: 700;
	font-style: italic;
	text-decoration: none;
	text-transform: uppercase;
	color: #82A6BA;
	margin-top: 10px;
	padding: 0;
}

h1, h2, h3, h4, h5, p, a, body {
	font-family: Arvo, Helvetica, Arial;
	color: #444;
}

body { 
	background-image: url("../img/ps_neutral.png");
}

h1, h2, h3, h4, h5, p, a {
	margin: 0;
	padding: 0;
	line-height: 1;
}

.head-label {
	background-color: #82a6ba;
	color: white;
	padding: 5px 5px;
}

.head-label .span1 {
	min-height: 0px;
}

.head-label > div:nth-child(2) {
	border-right: 1px #333333;
}

.schedule {
	border-bottom: 1px dotted #aaa;
	padding: 10px;
	padding-bottom: 0;
	background-position: 50% 95%;
	background-repeat: no-repeat;
	background-size: 16px;
}

.arrow {
	background-color: rgba(0,0,0,.05);
	height: :;
}

.arrow img {
	width: 10px;
}

.head-label {
	min-height: 1px;
	padding: 0;
}

.head-label p {
	color: white;
}

.head-label > div > p {
	color: white;
	line-height: 20px;
}

#stops {
    margin-bottom: 60px;
}

.stop-name {
	background-color: #a7bfcc;
	padding: 1em;
	text-align: center;
	letter-spacing: 1px;
}

.stop-name:hover {
	background-color: #A7BFCC;
}  

.stop-name > h4 {
	color:white;
	line-height: 1.25em;
}

.stop-name > p {
	color:white;
}

.route, .timeframe {
	height: 50px;
	line-height: 50px;
	color: white;
	font-size: 1.5em;
	text-align: center;
}

.route {
	color:#7398AC;
	background-color:#a7bfcc;
	font-weight: 700;
}

.timeframe {
	background-color:#DB5051;
}

.departed {
	background-color: transparent;
	border: 3px solid #DDC6AA;
}

.destination {
	font-size: 1em;
	text-align: center;
	font-family: Arvo;
	font-weight: 400;
	padding-left:10px;
}

.destination p:first-child {
	line-height: 30px;
}

.arrivals .table > div {
	background-color: white;
}

.arrivals .table > div:nth-child(odd) {
	background-color: #EEDFCC;
}

.no-arrivals {
	padding: 10px;
}

.extended-info {
	background-color: #efefef;
	color: #444;
	font-style: italic;
	line-height: 2rem;
}

.extended-info strong {
	font-weight: bold;
	color: #1a1a1a;
}


@media (max-width: 767px) {
	body {
		padding: 0px;
	}
	
	.navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
		margin-right: 0px;
		margin-left: 0px;
	}
	
	#stops .row-fluid {
		position: relative;
	}
	
	.head-label {
		height: 40px;
	}
	
	.head-label > div {
		position: absolute;
		top: 25%;
		margin: 0px;
	}
	
	.schedule > .row-fluid {
		height: 60px;
	}
	
	.schedule > .row-fluid > div {
		position: absolute;
	}
	
	.quarter {
        width: 20% !important;
		top: 0px;
		margin-top: 5px;
		margin-bottom: 5px;
    }

	.quarter:first-child {
		left: 0px;
    }

	.quarter:last-child {
		right: 0px;
    }

    .half {
        width: 60% !important;
		right: 20%;
		padding-left: 3px;
		padding-right: 3px;
    }

	.destination p:first-child {
		line-height: normal;
		margin-bottom: 3px;
	}
	
	.destination {
	    padding-top: 7px;
	}
}

/************************
Hiding Search Bar
************************/

div.navbar-inner-form {
	display: none;
}

/************************
Loading Message 
************************/

#loading {
	z-index: -5;
	display: block;
	position: absolute;
	top: 40%;
	width: 100%;
}

#loading p {
	text-align: center;
	display: block;
	font-size: 1.25em;
	margin: 1em;
}

#loading img {
	display: block;
	margin: 0 auto;
	margin-bottom: 5px;
}

/************************
About Page 
************************/

div#about {
	background-color: white;
	padding: 1.5;
	padding-top: 0px;
	position: fixed;
	bottom: 0;
	width:100%;
	margin: 0 auto;
	z-index: 10;
}

@media screen and (min-width: 768px) {

	div#about {

	}

}

div#mask {
	position: absolute;
	display: none;
	height: 100%;
	width: 100%;
	z-index: 2;
	
}

div#about-text {
	display: none;

}

div#about-trigger {
	font-size: 1.25em;
	font-weight: 700;
	color: #DB5051;
	padding-left: 5px;
	line-height: 45px;
	position: relative;
	height: 45px;
}

div#exit {
	display: none;
	position: absolute;
	-webkit-border-radius: 999px;
    -moz-border-radius: 999px;
    border-radius: 999px;
    height: 24px;
    width: 24px;
    line-height: 24px;
    font-size: 12px;
    text-align: center;
    padding: .25em 0;
   	border-color: #dfdfdf;
    border-bottom: none;
	top:-10px;
	right:10px;
	background-color: white;
	font-weight: 300;
	color: gray;
	box-shadow: 0em .125em .125em rgba(0,0,0,.125);
}

div#about-text {
	margin: 0 auto;
	padding: 1em 2em;
}

div#about-text p {
	margin-bottom: .5em;
	font-size: 90%;
	line-height: 1.25em;
	text-align: justify;	
}

div#about-text a {
	font-weight: bold;
	color: #DB5051;
}

/************************
Link to map version.
************************/

#old-map {
	background-color: #DB5051;
	/*height: 36px;*/
	display: none;
	padding: .5em;
}

#old-map p {
	font-size: 18px;
	line-height: 18px;
	text-align: center;
	color: white;
}

#old-map p span {
	font-size: 11px;
}

#old-map a {
	color: white !important;
	font-style: italic;
	font-weight: bold;
}

/*********************
map canvas
*********************/

.mapcanvas {
	display: none;
	width: 100%;
}

